samples/_failures_safe/1761439237_58b738_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc0df21f.c: In function ‘tokenize’:
./samples/SAFE/__tmp_cc0df21f.c:168:5: error: expected expression at end of input
  168 |     while (input[pos] !=
      |     ^~~~~
./samples/SAFE/__tmp_cc0df21f.c:168:5: error: expected declaration or statement at end of input
